# physics-engine

./: .gitignore  README.md  configuration.py  logger.py  physics_runner.py  pyproject.toml  requirements.txt  setup.py
objects/: circle.py  circleshape.py  simulationfield.py
