[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "physics-engine"
authors = [
    {name = "Matt MacQueston", email = ""}
]
description = "A simple physics engine"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"